Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.2, 10.3.0, 10.4.0
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
A fix in MySQL 5.7.6 was not completely merged to MariaDB.
Bug#19419026 WHEN A TABLESPACE IS NOT FOUND, DO NOT REPORT "TABLE NOT FOUND"
This omission was noticed as part of adding the test innodb.missing_tablespaces from MySQL 5.7.6.
Attachments
Issue Links
- is part of
-
MDEV-13626 Merge InnoDB test cases from MySQL 5.7
-
- Confirmed
-